<resources>
    <string name="app_name">KoveePetshop</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="title_activity_owner">OwnerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_quantity">Jumlah</string>
    <string name="product_price">Harga</string>
    <string name="product_measurement">Satuan Produk</string>
    <string name="minimum_quantity">Jumlah Minmal</string>
    <string name="product_image">Gambar Produk</string>
    <string name="image_path">Lokasi Gambar</string>
    <string name="file">Berkas</string>
    <string name="insert">Masukan</string>
    <string name="all_column_must_be_filled">Semua kolom harus terisi.</string>
    <string name="select_picture">Pilih Gambar</string>
    <string name="product_created">Produk berhasil dimasukan</string>
    <string name="product">Produk</string>
    <string name="product_deletion">Penghapusan Produk</string>
    <string name="product_deletion_confirmation">Apakah anda yakin ingin menghapus produk?</string>
    <string name="yes">Ya</string>
    <string name="product_deletion_success">Produk berhasil dihapus</string>
    <string name="no">Tidak</string>
    <string name="update">Ubah</string>
    <string name="product_updated">Produk berhasil diubah</string>
    <string name="insert_product">Masukan Product</string>
    <string name="home">Beranda</string>
    <string name="pet_type">Tipe Hewan</string>
    <string name="service">Layanan</string>
    <string name="owner_menu">Menu Owner</string>
    <string name="legt_paw">Cakar Kiri</string>
    <string name="right_paw">Cakar Kanan</string>
    <string name="kouvee_pet_shop_logo">Kouvee Pet Shop Logo</string>
    <string name="edit_product">Ubah Produk</string>
    <string name="insert_pet_type">Masukan Tipe Hewan</string>
    <string name="pet_type_cant_be_empty">Tipe hewan tidak boleh kosong</string>
    <string name="pet_type_inserted">Tipe hewan berhasil dimmasukan</string>
    <string name="pet_type_updated">Tipe hewan berhasil diubah</string>
    <string name="pet_size">Ukuran Hewan</string>
    <string name="pet_type_deletion">Penghapusan Tipe Hewan</string>
    <string name="pet_type_delete_confirmation">Apakah anda yakin untuk menghapus tipe hewan?</string>
    <string name="pet_type_deleted">Tipe Hewan berhasil dihapus</string>
    <string name="insert_pet_size">Masukan Ukuran Hewan</string>
    <string name="pet_size_cant_be_empty">Ukuran hewan tidak boleh kosong</string>
    <string name="pet_size_inserted">Ukuran hewan berhasil dimasukan</string>
    <string name="pet_size_restriction_message">Ukuran hewan hanya boleh small, medium, large, dan extra large</string>
    <string name="edit_pet_size">Ubah Ukuran Hewan</string>
    <string name="pet_size_updated">Ukuran hewan berhasil diubah</string>
    <string name="pet_size_deletion">Penghapusan Ukuran Hewan</string>
    <string name="pet_size_delete_confirmation">Apakah anda yakin akan menghapus ukuran hewan?</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="address">Alamat</string>
    <string name="supplier_name">Nama Supplier</string>
    <string name="supplier">Supplier</string>
    <string name="insert_supplier">Masukan Supplier</string>
    <string name="supplier_inserted">Supplier berhasil dimasukan</string>
    <string name="update_supplier">Ubah Supplier</string>
    <string name="supplier_updated">Supplier berhasil diubah</string>
    <string name="supplier_deleted">Supplier berhasil dihapus</string>
    <string name="insert_service">Masukan Layanan</string>
    <string name="service_cant_be_empty">Layanan tidak boleh kosong</string>
    <string name="service_inserted">Layanan berhasil dimasukan</string>
    <string name="update_service">Ubah Layanan</string>
    <string name="service_updated">Layanan berhasil diubah</string>
    <string name="service_deletion">Penghapusan Layanan</string>
    <string name="service_delete_confirmation">Apakah anda yakin akan menghapus layanan?</string>
    <string name="service_deleted">Layanan berhasil dihapus</string>
    <string name="service_price">Harga Layanan</string>
    <string name="service_name">Nama Layanan</string>
    <string name="service_detail">Detail Layanan</string>
    <string name="insert_service_detail">Masukan Detail Layanan</string>
    <string name="price_cant_be_empty">Harga layanan tidak boleh kosong</string>
    <string name="service_detail_created">Detail layanan berhasil dimasukan</string>
    <string name="service_detail_updated">Detail layanan berhasil diubah</string>
    <string name="service_detail_deletion">Penghapusan Detail Layanan</string>
    <string name="service_detail_delete_confirmation">Apakah anda yakin akan menghapus detail layanan?</string>
    <string name="service_detail_deleted">Detail layanan berhasil dihapus</string>
    <string name="logout">Keluar</string>
    <string name="logout_confirmation">Apakah anda yakin untuk keluar?</string>
    <string name="cs_menu">CS Menu</string>
    <string name="pet">Hewan</string>
    <string name="customer_name">Nama Customer</string>
    <string name="pet_name">Nama Hewan</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="insert_pet">Masukan Hewan</string>
    <string name="pet_name_cant_be_empty">Nama hewan tidak boleh kosong!</string>
    <string name="pet_inserted">Hewan berhasil dimasukan</string>
    <string name="update_pet">Ubah Hewan</string>
    <string name="pet_deletion">Penghapusan Hewan</string>
    <string name="delete_pet_confirmation">Apakah anda yakin akan menghapus hewan?</string>
    <string name="pet_deleted">Hewan berhasil dihapus</string>
    <string name="customer">Customer</string>
    <string name="insert_customer">Masukan Customer</string>
    <string name="customer_inserted">Customer berhasil dimasukan</string>
    <string name="update_customer">Ubah Customer</string>
    <string name="customer_updated">Customer berhasil diubah</string>
    <string name="customer_deletion">Penghapusan Customer</string>
    <string name="customer_delete_confirmation">Apakah anda yakin akan menghapus customer?</string>
    <string name="customer_deleted">Customer berhasil dihapus</string>
    <string name="min_qty_warning">Minimum Product Quantity Warning</string>
    <string name="min_qty_warning_desc">Channel for minimum product quantity warning.</string>
    <string name="min_qty_warning_id">min_qty_warning</string>
    <string name="something_wrong_msg">Terjadi Kesalahan</string>
    <string name="restock">Restock</string>
    <string name="choose_supplier">Pilih Supplier</string>
    <string name="title_activity_restock">RestockActivity</string>
    <string name="booked_quantity">Jumlah dipesan</string>
    <string name="process">Proses</string>
    <string name="no_booked_product">Tidak ada produk yang dipesan</string>
    <string name="product_restock">Restock Produk</string>
    <string name="product_stock">Stock Produk</string>
    <string name="product_restock_detail">Detail Produk Restock</string>
    <string name="restock_code">Kode Restock</string>
    <string name="confirm">Konfirmasi</string>
    <string name="product_arrived">Pesanan Sampai</string>
    <string name="booking_confirmation">Konfirmasi Pesanan</string>
    <string name="confirm_booking_confirmation">Apakah anda yakin ingin mengkonfirmasi pesananan?</string>
    <string name="confirmation_success">Konfirmasi sukses</string>
    <string name="max_10_chars">Maksimal 10 karakter</string>
    <string name="number_only_product_qty">Jumlah produk hanya boleh angka</string>
    <string name="phone_number_max">Nomor telepon maksimal 15 karakter</string>
    <string name="title_activity_product_transaction">ProductTransactionActivity</string>
    <string name="product_stock_left">Tersisa</string>
    <string name="add">Tambah</string>
    <string name="product_transaction">Transaksi Produk</string>
    <string name="buy_product">Beli Produk</string>
    <string name="product_list">Daftar Produk</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Keranjang</string>
    <string name="ubah">Edit</string>
    <string name="choose_customer">Pilih Customer</string>
    <string name="sort">Urutkan</string>
    <string name="higher_price">Harga Tertinggi</string>
    <string name="lower_price">Harga Terendah</string>
    <string name="sort_product">Urutkan Produk</string>
    <string name="least_stock">Stock Paling Sedikit</string>
    <string name="more_stock">Stock Paling Banyak</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="discount">Diskon</string>
    <string name="change">Kembalian</string>
    <string name="transaction_code">Kode Transaksi</string>
    <string name="product_payment">Pembayaran Produk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_deletion">Penghapusan Transaksi</string>
    <string name="transaction_deletetion_confirmation">Apakah anda yakin akan menghapus transaksi?</string>
    <string name="member_discount">Diskon Member</string>
    <string name="idr">Rp</string>
    <string name="payment">Pembayaran</string>
    <string name="price">Harga</string>
    <string name="payment_not_enough">Pembayaran kurang</string>
    <string name="service_transaction">Transaksi Service</string>
    <string name="guest_question_mark">Tamu?</string>
    <string name="service_list">Daftar Layanan</string>
    <string name="about_us">Tentang Kami</string>
    <string name="kouvee_pet_shop_desc">Kouvee Pet Shop merupakan sebuah toko hewan yang sudah berdiri sejak tahun 2018 menyediakan produk dan jasa layanan yang berada di Kota Yogyakarta. Kouvee Pet Shop menyediakan berbagai macam produk untuk hewan kesayangan anda seperti makanan, aksesoris, perlengkapandan lain-lain sesuai kebutuhan hewan kesayangan anda. Selain menjual berbagai macam produk, Kouvee Pet Shop juga menyediakan jasa layanan seperti grooming dan penitipan hewan. Kouvee Pet Shop bekerja sama dengan beberapa supplier dalam penyediaan produk yang dijual.</string>
    <string name="title_activity_service_transaction">ServiceTransactionActivity</string>
    <string name="choose_pet">Pilih Peliharaan</string>
    <string name="name">Nama</string>
</resources>
