<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_lower_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lower_price" />

        <RadioButton
            android:id="@+id/rb_higher_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/higher_price" />

        <RadioButton
            android:id="@+id/rb_least_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/least_stock" />

        <RadioButton
            android:id="@+id/rb_more_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_stock" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>