<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product_list">

    <fragment
        android:id="@+id/navigation_product_list"
        android:name="com.p3lj2.koveepetshop.view.product.transaction.ProductListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.p3lj2.koveepetshop.view.product.transaction.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.p3lj2.koveepetshop.view.product.transaction.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
