<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/product_stock">

    <fragment
        android:id="@+id/product_stock"
        android:name="com.p3lj2.koveepetshop.view.restock.ProductStockFragment"
        android:label="@string/product_stock"
        tools:layout="@layout/fragment_product_stock" />

    <fragment
        android:id="@+id/navigation_product_restock_detail"
        android:name="com.p3lj2.koveepetshop.view.restock.ProductRestockDetailFragment"
        android:label="@string/product_restock_detail"
        tools:layout="@layout/fragment_product_restock_detail" />

    <fragment
        android:id="@+id/navigation_product_arrived"
        android:name="com.p3lj2.koveepetshop.view.restock.ProductArrivedFragment"
        android:label="@string/product_arrived"
        tools:layout="@layout/fragment_product_arrived" />
</navigation>
